fixed chat text align

--- a/Chat/Chat/ClientApp/src/app/chatpage/chatpage.component.css
+++ b/Chat/Chat/ClientApp/src/app/chatpage/chatpage.component.css
@@ -1,8 +1,8 @@
 .sender{
     background-color: antiquewhite;
-    direction: rtl;
+    text-align: left;
 }
 .receiver{
     background-color: coral;
-    direction: ltr;
+    text-align: right;
 }
